[gd_scene load_steps=24 format=3 uid="uid://cj6b1r8b6jel3"]

[ext_resource type="PackedScene" uid="uid://dpaxvlnn2u1f6" path="res://material_maker/panels/preview_3d/preview_3d.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://brlp703awvxbn" path="res://material_maker/panels/preview_3d/preview_3d_ui.tscn" id="2"]
[ext_resource type="Script" uid="uid://f81isnxjqrub" path="res://material_maker/panels/preview_3d/preview_3d_panel.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bqre7xkdgb655" path="res://material_maker/environments/hdris/moonless_golf_1k.hdr" id="3_6ex0n"]
[ext_resource type="Texture2D" uid="uid://1s0c37uoj4rf" path="res://material_maker/theme/default_theme_icons.svg" id="4_1y5jf"]
[ext_resource type="Script" uid="uid://c37lcka7r53wk" path="res://material_maker/panels/common/menu_bar_button_with_panel.gd" id="5_3wjmy"]
[ext_resource type="Script" uid="uid://bntvqam28c8qx" path="res://material_maker/panels/preview_3d/model_menu.gd" id="6_ihg7a"]
[ext_resource type="PackedScene" uid="uid://dj5q8sxvd3gci" path="res://material_maker/widgets/option_edit/option_edit.tscn" id="6_is3yl"]
[ext_resource type="Script" uid="uid://k528bu7vevi0" path="res://material_maker/panels/preview_3d/environment_menu.gd" id="9_dj5a4"]

[sub_resource type="Shader" id="1"]
code = "shader_type spatial;
render_mode unshaded;

uniform vec3 aabb_position;
uniform vec3 aabb_size;
varying vec3 position;

void vertex() {
	position = (VERTEX-aabb_position)/aabb_size;
}

void fragment() {
	ALBEDO = position;
}"

[sub_resource type="ShaderMaterial" id="2"]
render_priority = 0
shader = SubResource("1")
shader_parameter/aabb_position = null
shader_parameter/aabb_size = null

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_40ogr"]
panorama = ExtResource("3_6ex0n")

[sub_resource type="Sky" id="Sky_wye7d"]
sky_material = SubResource("PanoramaSkyMaterial_40ogr")

[sub_resource type="Environment" id="Environment_qxxdb"]
background_mode = 1
background_color = Color(1, 1, 1, 0)
sky = SubResource("Sky_wye7d")
ambient_light_source = 3
reflected_light_source = 2

[sub_resource type="World3D" id="World3D_3xlky"]
environment = SubResource("Environment_qxxdb")

[sub_resource type="AtlasTexture" id="AtlasTexture_2aqpg"]
atlas = ExtResource("4_1y5jf")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3rxa"]
atlas = ExtResource("4_1y5jf")
region = Rect2(32, 0, 16, 16)

[sub_resource type="ButtonGroup" id="ButtonGroup_h3rxa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_101bs"]
atlas = ExtResource("4_1y5jf")
region = Rect2(48, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5dml"]
atlas = ExtResource("4_1y5jf")
region = Rect2(64, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ck7o"]
atlas = ExtResource("4_1y5jf")
region = Rect2(80, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hxco"]
atlas = ExtResource("4_1y5jf")
region = Rect2(96, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uda2n"]
atlas = ExtResource("4_1y5jf")
region = Rect2(112, 16, 16, 16)

[node name="Preview3D" instance=ExtResource("1")]
custom_minimum_size = Vector2(250, 200)
offset_left = -1.0
offset_top = -2.0
offset_right = 248.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")
click_material = SubResource("2")

[node name="BG" type="Panel" parent="." index="0"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"MM_PanelBackground"

[node name="MaterialPreview" parent="." index="1"]
world_3d = SubResource("World3D_3xlky")
transparent_bg = true
size = Vector2i(250, 200)

[node name="TextureRect" type="TextureRect" parent="." index="2"]
visible = false
layout_mode = 2
mouse_filter = 2
expand_mode = 1

[node name="UI" type="PanelContainer" parent="." index="3"]
visible = false
layout_mode = 2

[node name="Preview3DUI" parent="UI" index="0" instance=ExtResource("2")]
layout_mode = 2

[node name="PopupMenu" type="PopupMenu" parent="." index="4"]
size = Vector2i(215, 100)
item_count = 2
item_0/text = "Reset center"
item_0/id = 0
item_1/text = "Center on clicked surface"
item_1/id = 1

[node name="MenuBar" type="ScrollContainer" parent="." index="5"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme_type_variation = &"MM_PanelMenuBackground"
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBox" type="HFlowContainer" parent="MenuBar" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainMenu" type="PanelContainer" parent="MenuBar/HBox" index="0"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"MM_PanelMenuBar"

[node name="HBox" type="HBoxContainer" parent="MenuBar/HBox/MainMenu" index="0"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuBar"

[node name="ModelMenu" type="Button" parent="MenuBar/HBox/MainMenu/HBox" index="0"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
tooltip_text = "Model"
theme_type_variation = &"MM_PanelMenuButton"
toggle_mode = true
button_mask = 3
script = ExtResource("5_3wjmy")
icon_name = "model"

[node name="ModelMenuPanel" type="PanelContainer" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu" index="0"]
visible = false
top_level = true
layout_mode = 0
offset_left = -53.0
offset_top = 34.0
offset_right = 158.0
offset_bottom = 100.0
theme_type_variation = &"MM_PanelMenuSubPanel"
script = ExtResource("6_ihg7a")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" index="0"]
layout_mode = 2

[node name="Model" type="GridContainer" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer" index="0"]
layout_mode = 2
columns = 2

[node name="ModelLabel" type="Label" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model" index="0"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "Model"

[node name="HBox" type="HBoxContainer" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model" index="1"]
layout_mode = 2

[node name="Model" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/HBox" index="0" instance=ExtResource("6_is3yl")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 6
popup/item_0/text = "Cube"
popup/item_0/id = 0
popup/item_1/text = "Cylinder"
popup/item_1/id = 1
popup/item_2/text = "Sphere"
popup/item_2/id = 2
popup/item_3/text = "Prism"
popup/item_3/id = 3
popup/item_4/text = "Plane"
popup/item_4/id = 4
popup/item_5/text = "Custom"
popup/item_5/icon = SubResource("AtlasTexture_2aqpg")
popup/item_5/id = 5

[node name="ModelConfigurate" type="Button" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/HBox" index="1"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Configure"
icon = SubResource("AtlasTexture_h3rxa")

[node name="HSeparator" type="HSeparator" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model" index="2"]
visible = false
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model" index="3"]
visible = false
layout_mode = 2

[node name="RotationLabel" type="Label" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model" index="4"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "Rotate"

[node name="RotationSpeeds" type="HBoxContainer" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model" index="5"]
layout_mode = 2

[node name="Speed_Pause" type="Button" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Paused"
toggle_mode = true
button_group = SubResource("ButtonGroup_h3rxa")
icon = SubResource("AtlasTexture_101bs")
icon_alignment = 1

[node name="Speed_Slow" type="Button" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Slow"
toggle_mode = true
button_group = SubResource("ButtonGroup_h3rxa")
icon = SubResource("AtlasTexture_q5dml")
icon_alignment = 1

[node name="Speed_Medium" type="Button" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Medium"
toggle_mode = true
button_group = SubResource("ButtonGroup_h3rxa")
icon = SubResource("AtlasTexture_8ck7o")
icon_alignment = 1

[node name="Speed_Fast" type="Button" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds" index="3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Fast"
toggle_mode = true
button_group = SubResource("ButtonGroup_h3rxa")
icon = SubResource("AtlasTexture_1hxco")
icon_alignment = 1

[node name="GenerateMapsSection" type="GridContainer" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer" index="1"]
visible = false
layout_mode = 2
columns = 2

[node name="GenerateMapHeader" type="Button" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection" index="0"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"MM_PanelMenuSubPanelSection"
toggle_mode = true
text = "Generate Map"
icon = SubResource("AtlasTexture_uda2n")
flat = true
icon_alignment = 2

[node name="GenerateMapSection" type="BoxContainer" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection" index="1"]
visible = false
layout_mode = 2
vertical = true

[node name="MapTypeLabel" type="Label" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection/GenerateMapSection" index="0"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "Type"

[node name="MapType" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection/GenerateMapSection" index="1" instance=ExtResource("6_is3yl")]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 6
popup/item_0/text = "Position"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Curvature"
popup/item_2/id = 2
popup/item_3/text = "Ambient Occlusion"
popup/item_3/id = 3
popup/item_4/text = "Bent Normals"
popup/item_4/id = 4
popup/item_5/text = "Thickness"
popup/item_5/id = 5

[node name="MapResolutionLabel" type="Label" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection/GenerateMapSection" index="2"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "Resolution"

[node name="MapResolution" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection/GenerateMapSection" index="3" instance=ExtResource("6_is3yl")]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 5
popup/item_0/text = "256x256"
popup/item_0/id = 0
popup/item_1/text = "512x512"
popup/item_1/id = 1
popup/item_2/text = "1024x1024"
popup/item_2/id = 2
popup/item_3/text = "2048x2048"
popup/item_3/id = 3
popup/item_4/text = "4096x4096"
popup/item_4/id = 4

[node name="ResetViewButton" type="Button" parent="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection/GenerateMapSection" index="4"]
layout_mode = 2
text = "Generate Map"

[node name="EnvironmentMenu" type="Button" parent="MenuBar/HBox/MainMenu/HBox" index="1"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
tooltip_text = "Environment"
theme_type_variation = &"MM_PanelMenuButton"
toggle_mode = true
button_mask = 3
script = ExtResource("5_3wjmy")
icon_name = "environment"

[node name="EnvironmentMenuPanel" type="PanelContainer" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu" index="0"]
top_level = true
layout_mode = 0
offset_left = -53.0
offset_top = 34.0
offset_right = 117.0
offset_bottom = 154.0
theme_type_variation = &"MM_PanelMenuSubPanel"
script = ExtResource("9_dj5a4")

[node name="VBox" type="GridContainer" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel" index="0"]
layout_mode = 2
columns = 2

[node name="EnvironmentLabel" type="Label" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox" index="0"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "Environment"

[node name="Box" type="BoxContainer" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox" index="1"]
layout_mode = 2

[node name="Environment" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox/Box" index="0" instance=ExtResource("6_is3yl")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 3
popup/item_0/text = "Epping Forest"
popup/item_0/id = 0
popup/item_1/text = "Moonless Golf"
popup/item_1/id = 1
popup/item_2/text = "Studio"
popup/item_2/id = 2

[node name="EnvironmentEditorButton" type="Button" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox/Box" index="1"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = " Environment Editor"

[node name="ClearBackground_Label" type="Label" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox" index="2"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "Clear BG"

[node name="ClearBackground" type="CheckBox" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox" index="3"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="TonemapLabel" type="Label" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox" index="4"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "Tonemap"

[node name="ToneMap" parent="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox" index="5" instance=ExtResource("6_is3yl")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 4
popup/item_0/text = "Linear"
popup/item_0/id = 0
popup/item_1/text = "Reinhard"
popup/item_1/id = 1
popup/item_2/text = "Filmic"
popup/item_2/id = 2
popup/item_3/text = "ACES"
popup/item_3/id = 3

[connection signal="mouse_entered" from="." to="." method="_on_Preview3D_mouse_entered"]
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="item_selected" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/HBox/Model" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_model_item_selected"]
[connection signal="pressed" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/HBox/ModelConfigurate" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_model_configurate_pressed"]
[connection signal="toggled" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds/Speed_Pause" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_speed_pause_toggled"]
[connection signal="toggled" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds/Speed_Slow" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_speed_slow_toggled"]
[connection signal="toggled" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds/Speed_Medium" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_speed_medium_toggled"]
[connection signal="toggled" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds/Speed_Fast" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_speed_fast_toggled"]
[connection signal="toggled" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection/GenerateMapHeader" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_generate_map_header_toggled"]
[connection signal="item_selected" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection/GenerateMapSection/MapType" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_view_mode_item_selected"]
[connection signal="item_selected" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection/GenerateMapSection/MapResolution" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_view_mode_item_selected"]
[connection signal="pressed" from="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/GenerateMapsSection/GenerateMapSection/ResetViewButton" to="MenuBar/HBox/MainMenu/HBox/ModelMenu/ModelMenuPanel" method="_on_reset_view_button_pressed"]
[connection signal="item_selected" from="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox/Box/Environment" to="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel" method="_on_environment_item_selected"]
[connection signal="pressed" from="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox/Box/EnvironmentEditorButton" to="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel" method="_on_environment_editor_button_pressed"]
[connection signal="toggled" from="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox/ClearBackground" to="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel" method="_on_clear_background_toggled"]
[connection signal="item_selected" from="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBox/ToneMap" to="MenuBar/HBox/MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel" method="_on_tone_map_item_selected"]
